--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -24,9 +24,10 @@
     "vite": "^4.1.4"
   },
   "dependencies": {
+    "@gabs-ui/eslint-config": "*",
     "@gabs-ui/react": "*",
     "@gabs-ui/tokens": "*",
-    "@gabs-ui/eslint-config": "*",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
