--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -21,13 +21,14 @@
     "@storybook/testing-library": "^0.0.13",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-loader": "^8.3.0",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "vite": "^4.1.4"
   },
   "dependencies": {
-    "@gabs-ui/ts-config": "*",
     "@gabs-ui/eslint-config": "*",
     "@gabs-ui/react": "*",
     "@gabs-ui/tokens": "*",
+    "@gabs-ui/ts-config": "*",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
