--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -16,12 +16,12 @@
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
+    "@storybook/addon-styling": "^0.3.1",
     "@storybook/builder-vite": "^0.4.2",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-loader": "^8.3.0",
-    "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "vite": "^4.1.4"
   },
   "dependencies": {
